# visclick

./: .gitignore  PHASE_WORKLOG.md  README.md  pyproject.toml  requirements.txt
configs/: classes.txt  yolo_desktop_finetune.yaml  yolo_source.yaml
datasets/handcorrected_desktop_test/: README.md
docs/: Final_Report.md  Final_Report_GAPS.md  PHASE_WORKLOG.md  README.md  SUBMISSION_TASK_PLAN.md  VisClick_Detailed_Plan.md  VisClick_Report_Data_Form.md
notebooks/: 00_data_acquisition.ipynb  01_data_eda.ipynb  01_pull_and_data.ipynb  02_rico_zenodo_vins.ipynb  02_train_source.ipynb  03_eda.ipynb  03_finetune_desktop.ipynb  04_assemble_source.ipynb  04_experiments_transfer.ipynb  05_eval_and_ablations.ipynb  05_train_source.ipynb  06_finetune_desktop.ipynb  07_export_onnx.ipynb  08_phase1A_handlabel.ipynb  08_phase1B_ablations.ipynb
reports/: literature_table.csv
reports/tables/: baseline_per_task.csv  baseline_results.csv  (+14 more)
scripts/: analyse_baselines.py  annotate_export_to_yolo.py  baseline_common.py  baseline_ocr_only.py  baseline_pywinauto.py  baseline_template.py  baseline_visclick.py  capture_screenshots.py  colab_sync_handcorrected_one_cell.py  generate_colab_notebooks.py  make_prototype_figures.py  patch_colab_configs.py  push_personal.sh  renumber_references.py  run_baselines.py  run_cpv.py  run_cpv_screenspot.py  run_eval.py  run_nfr.py  sync_handcorrected_zip_to_drive.py  sync_reports_to_repo.py  test_click.py  test_detector.py  test_screen.py  where_is.py
tasks/: T01_T20.json
tests/: conftest.py  test_match.py  test_ocr.py  test_pipeline.py
(+12 files in other folders)
