[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visclick"
version = "0.1.0"
description = "Vision-based GUI element detection and click automation for desktop UIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "onnxruntime>=1.16.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "rapidfuzz>=3.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
